--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /ApiEmpleadosMultiplesRutas/appsettings - Copy.json
+/ApiEmpleadosMultiplesRutas/appsettings.json
